backend/k8s/30-backend-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: backend-stripprefix
  namespace: kari-panel
spec:
  stripPrefix:
    prefixes:
      - /backend
