backend/k8s/23-celery-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
  namespace: kari-panel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      containers:
        - name: celery-beat
          image: ghcr.io/NargesKari/kari-backend:latest
          imagePullPolicy: Always
          command:
            [
              "celery", "-A", "kari_backend", "beat", "-l", "info",
              "--scheduler", "django_celery_beat.schedulers:DatabaseScheduler",
            ]
