backend/k8s/20-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: kari-panel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/nargeskari/kari-backend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: kari-panel
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8000
      targetPort: http
