backend/k8s/31-ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kari-ingress-backend
  namespace: kari-panel
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: kari-panel-backend-stripprefix@kubernetescrd
spec:
  rules:
    - host: kari.osdl.ir
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
